Target Explorer: Fix findbugs warnings