@@ -229,7 +229,7 @@ public class PeerImportWizardPage extends WizardPage {
 		GridData buttonData = new GridData(GridData.FILL_HORIZONTAL);
 		button.setLayoutData(buttonData);
 
-		button.setData(new Integer(id));
+		button.setData(Integer.valueOf(id));
 		button.setText(label);
 		button.setFont(parent.getFont());
 
